<resources>
    <string name="app_name">AsPapp</string>
    <string name="Logo">logo</string>

    <!-- Registro 1 -->
    <string name="vacio"></string>
    <string name="otro">Especifíque por favor</string>
    <string name="ing_nombre">Nombre</string>

    <string name="descripcionImagenes">DesIMG</string>

    <string name="Buenas">Buenos días :</string>


    <string name="ProbandoTexto">Aqui van a ir las actividades</string>
    <!--Estas son etiquetas de Actividad calendario-->
    <string name="nombreActividad">Nombre de la actividad</string>
    <string name="ingreseNombreA">Nombre</string>
    <string name="horaInicio">Hora inicio: </string>
    <string name="horaFin">Hora fin: </string>
    <string name="participantes">Participantes</string>
    <string name="descripcionAct">Descripción de la actividad</string>
    <string name="chePrueba">Probando</string>

    <!--Estas son etiquetas de Amorometro principal-->
    <string name="nombreEjemplo">nombre hijo 1</string>
    <string name="nombreEjemplo1">nombre hijo 2</string>
    <string name="nombreEjemplo2">nombre hijo 3</string>
    <string name="nombreEjemplo3">nombre hijo 4</string>
    <string name="nombreEjemplo4">nombre hijo 5</string>

    <string name="porcentajeInicial">0%</string>

    <string name="etiquetaVacia"></string>


    <!--Estas son etiquetas de Amorometro individual-->
    <string name="criterio1">Actividades realizadas</string>
    <string name="criterio2">Actividades no realizadas</string>
    <string name="criterio3">Aciertos en dinámicas</string>
    <string name="criterio4">Fallos en dinámicas</string>
    <string name="criterio5">Dinámicas jugadas</string>
    <string name="valorInicial">0</string>

    <!--Estas son etiquetas de consejosCategoria-->
    <string name="PruebaConsejos">Nombre Consejo</string>

    <!--Nombres categoria 1-->
    <string name="tema1">Legado</string>
    <string name="tema2">Amigos</string>
    <string name="tema3">Corazón</string>
    <string name="tema4">Alguien</string>
    <string name="tema5">Siempre</string>


</resources>