<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AmorometrosPrincipal">

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:contentDescription="@string/descripcionImagenes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tb_amorometros_principal" />

    <ImageView
        android:id="@+id/imHora"
        android:layout_width="195dp"
        android:layout_height="76dp"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/descripcionImagenes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17"
        app:srcCompat="@drawable/dias" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/Buenas"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView25" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/descripcionImagenes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17"
        app:srcCompat="@drawable/s_icono_menu_amorometros" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:contentDescription="@string/descripcionImagenes"
        app:layout_constraintStart_toEndOf="@+id/imageView30"
        app:layout_constraintTop_toBottomOf="@+id/imageView17"
        app:srcCompat="@drawable/icono_menu_dinamicas" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/descripcionImagenes"
        android:onClick="irCalendario"
        app:layout_constraintStart_toEndOf="@+id/imageView20"
        app:layout_constraintTop_toBottomOf="@+id/imageView17"
        app:srcCompat="@drawable/icono_menu_calendario" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:contentDescription="@string/descripcionImagenes"
        android:onClick="irConsejos"
        app:layout_constraintStart_toEndOf="@+id/imageView25"
        app:layout_constraintTop_toBottomOf="@+id/imageView17"
        app:srcCompat="@drawable/icono_menu_consejos" />

    <TableLayout
        android:layout_width="350dp"
        android:layout_height="420dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imHora">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/txtNombre1"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="@string/nombreEjemplo"
                android:textColor="#000000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cora1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/corazon_barra" />

            <ProgressBar
                android:id="@+id/progress1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="270dp"
                android:layout_height="80dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>